Fixes behavior of scrollbars

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -48,16 +48,8 @@
 /* RESULTS DATA
 -----------------------------------*/
 
-.tableview {
-	position:relative;
-	overflow: hidden;
-}
-
-.tablecontent {
-	min-width: 100%;
-	height: 100%;
-	overflow: scroll;
-	position:relative;
+.pane {
+	overflow: auto;
 }
 
 .tableview th.sproutreports-reportname {
